--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.16",
     "autoprefixer": "^10.4.21",
+    "axios": "^1.13.0",
     "date-fns": "^4.1.0",
     "firebase": "^12.4.0",
     "framer-motion": "^12.23.24",
